Working tables submit

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,26 +2,17 @@
 
 <html lang="en">
   <head>
-
-    <meta charset="UTF-8">
-
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pet Shelter</title>
+    <title>Petshelter</title>
   </head>
 
   <body>
-
-
-  <body>
     <main class="container">Virtual Pet</main>
-
-
     <div id="react-mountpoint"></div>
     <script src="dist/react-app.js"></script>
   </body>
